# gowith

./: .env  .env.example  .gitignore  CELERY_README.md  EMAIL_SETUP.md  README.md  gunicorn.conf.py  how_to_run_celery.md  manage.py  pyproject.toml  schema.yml
.vercel/: project.json
adventurex/: urls.py  wsgi.py
ai/: tests.py  views.py
authentication/: address_usage_example.py  admin.py  casdoor_config.py  casdoor_utils.py  middleware.py  models.py  reverse_query_examples.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_userprofile_phone_alter_userprofile_sex_and_more.py  0003_remove_userprofile_birthday_remove_userprofile_email_and_more.py  0004_delete_userprofile.py  0005_alter_address_unique_together.py
events/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_options_event_introduction_and_more.py  0003_event_description.py  0004_event_is_public.py  0005_remove_event_is_public.py
gowith/: __init__.py  asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
matchmaking/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
matchmaking/migrations/: 0001_initial.py  0002_buddyrequest_profile_and_more.py  0003_buddyrequest_celery_task_id.py  0004_remove_buddyrequest_matchmaking_start_t_c44143_idx_and_more.py  0005_remove_buddyrequest_max_participants.py  (+1 more)
profiles/: admin.py  models.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  (+3 more)
utils/: email_utils.py
(+2 files in other folders)
