[project]
name = "gowith_be"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "STCN-2", email = "stcn2@smart-teach.cn"},
]
dependencies = ["django>=5.2.4", "djangorestframework>=3.16.0", "python-decouple>=3.8", "psycopg2-binary>=2.9.10", "casdoor>=1.32.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL3"}


[tool.pdm]
distribution = false
